<resources>

    <string name="app_name">Elib</string>
    <string name="app_name_slogan">Elib tiếng Anh cho người Việt</string>

    <!-- home menu-->
    <string name="action_my_profile">Thông tin cá nhân</string>
    <string name="action_settings">Cài đặt</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="action_login">Đăng nhập</string>

    <!-- Login, sign up hint -->
    <string name="username_hint">Tên tài khoản</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="email_hint">Email</string>
    <string name="re_password_hint">Nhập lại mật khẩu</string>

    <!-- Login-->
    <string name="title_activity_login">Đăng nhập</string>
    <string name="login_button_label">Đăng nhập</string>
    <string name="title_activity_sign_up">Đăng ký tài khoản</string>

    <!-- sign up-->
    <string name="sign_up_button_label">Đăng ký</string>
    <string name="sign_up_label">Tạo tài khoản mới.</string>
    <string name="registered_label">Đã có tài khoản.</string>

    <!-- speech recognition-->
    <string name="speech_waiting_prompt">Đang lắng nghe...</string>
    <string name="google_voice_input_missing_error">Thiết bị không hỗ trợ Google Voice Input!</string>

    <!-- dialog -->
    <string name="ok_button">ĐỒNG Ý</string>
    <string name="error_message">Có lỗi xảy ra trong quá trình chạy. Bạn có muốn gửi báo cáo lỗi? Nó giúp chúng tôi hỗ trợ bạn tốt hơn!</string>
    <string name="send_button">GỬI</string>
    <string name="no_button">KHÔNG</string>
    <string name="warn_title">Cảnh báo!</string>
    <string name="warn_message">Bạn chắc chắn chứ?</string>
    <string name="cancel_button">HỦY BỎ</string>

    <!--dictionary -->
    <string name="title_activity_search_vocab">Từ điển Anh-Việt</string>
    <string name="title_activity_translator">Dịch văn bản</string>
    <string name="search_vocab_hint">Nhập từ cần tìm</string>
    <string name="title_activity_vocab_content">Từ điển Anh-Việt</string>
    <string name="no_vocab_content">Từ hiện không có trong từ điển</string>

    <!-- search vocabulary by voice -->
    <string name="title_activity_voice_search">Đọc từ tra nghĩa</string>
    <string name="voice_guiding_text_1">Nhấn vào biểu tượng microphone để đọc</string>

    <!-- reading stories -->
    <string name="title_activity_story_list">Danh sách truyện</string>
    <string name="title_activity_story_content">Đọc truyện</string>

    <!-- exercies -->
    <string name="title_activity_list_exercise">Danh sách bài tập</string>
    <string name="title_activity_exercise_content">Bài tập</string>

    <!-- excercies result -->
    <string name="title_activity_exercise_result">Kết quả</string>
    <string name="result_title_text">KẾT QUẢ</string>
    <string name="answer_title_text">ĐÁP ÁN</string>

    <!-- topic -->
    <string name="title_activity_topic_list">Danh sách chủ đề</string>
    <string name="title_activity_topic_content_actitvity">Danh sách từ vựng</string>
    <string name="title_activity_multiple_choice">Bài tập</string>
    <string name="menu_done_label">Nộp bài</string>
    <string name="menu_exercise_label">Bài tập</string>
    <string name="search_button_label">Tìm kiếm</string>
    <string name="voice_search_description">Voice search</string>
    <string name="fill_in_blanks_title">Điền từ vào chỗ trống</string>

    <!-- pronounce practice -->
    <string name="title_activity_pronounce_practice">Luyện Phát Âm</string>

    <!-- my notebook -->
    <string name="title_activity_my_notebook">Sổ tay của tôi</string>

    <!-- translator -->
    <string name="yandex_refer">Powered by Yandex.Translate</string>
    <string name="translator_input_instruction">Nhập đoạn văn để dịch</string>
    <string name="translator_ouput_label">Kết quả dịch.</string>
    <string name="language_demo_label">Chọn ngôn ngữ: Anh - Việt</string>
    <string name="menu_language_label">Ngôn ngữ</string>

    <!-- multiple choice list -->

    <string name="title_activity_multiple_choice_list">Danh sách bài tập</string>
    <string name="next_button_label">Câu tiếp</string>
    <string name="bad_status_result">Chưa đạt ! Bạn cần cố gắng hơn</string>
    <string name="normal_status_result">Bạn có thể làm tốt hơn nữa</string>
    <string name="good_status_result">Tuyệt vời !</string>
    <string name="title_activity_grammar">Học ngữ pháp</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_grammar_detail">Nội dung ngữ pháp</string>
    <string name="search_hint">Tìm kiếm...</string>
    <string name="action_search">Tìm từ...</string>
</resources>
