<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".HomeActivity">
      <item android:id="@+id/action_my_profile"
          android:title="@string/action_my_profile"
          android:orderInCategory="1"
          app:showAsAction="never"/>
      <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="2"
          app:showAsAction="never"/>
      <item android:id="@+id/action_login"
          android:title="@string/action_login"
          android:orderInCategory="3"
          app:showAsAction="never"/>
      <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
