<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".HomeActivity">
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_voice"
          android:title=""
          android:icon="@mipmap/ic_keyboard_voice_white_48dp"
          android:orderInCategory="60"
          app:showAsAction="always"/>
    <item android:id="@+id/action_my_profile"
          android:title="@string/action_my_profile"
          android:orderInCategory="70"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="80"
          app:showAsAction="never"/>
    <item android:id="@+id/action_login"
          android:title="@string/action_login"
          android:orderInCategory="90"
          app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
