<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.pagenguyen.elib.ui.main.LoginActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/tool_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appName"
        android:textColor="@color/TextColorBlue"
        android:textSize="@dimen/font_size_app_name"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/my_toolbar"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_obj_space"
        android:id="@+id/linearLayout"
        android:padding="@dimen/padding_inner_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameField"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/username_hint"
            android:focusable="true"
            android:singleLine="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/login_button_label"
            android:paddingTop="@dimen/padding_inner_button"
            android:paddingBottom="@dimen/padding_inner_button" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logInProgress"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_obj_space" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_label"
        android:id="@+id/signUpLink"
        android:textSize="@dimen/font_size_small"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="signUp"
        android:layout_marginBottom="@dimen/margin_obj_space"
        android:textColor="@color/TextColorBlack" />

</RelativeLayout>
